# shelltris

./: Makefile  Makefile.am  README.md  configure.ac  shelltris.sh
src/: calibrate.sh  highscore.sh
