# Copyright 2017 Declan Hoare

AC_INIT([shelltris], [1.2], [https://github.com/RogueAI42/shelltris/issues], [shelltris], [http://www.shellscriptgames.com/shelltris])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([getch.c])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.11 -Wall foreign])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_OUTPUT
